--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 2</title>
+    <title>Tab Title</title>
 </head>
 <body>
-    G'day mate!
+    <header>
+        <h1>I am the page "title"</h1>
+    </header>
+
+    <main>
+        <hr>
+        <h2>Heading &lt;A</h2>
+        <h3>Secondary Outline Header</h3>
+
+        <hr>
+        <h2>Heading B</h2>
+        <img src="https://res.cloudinary.com/hrscywv4p/image/upload/c_limit,fl_lossy,h_9000,w_1200,f_auto,q_auto/v1/983693/Alchemy_Final_logo-17_mti4vd.png" width="50%">
+
+        <hr>
+        <h2>Heading C</h2>
+        <ol>
+            <li>Wash Dishes</li>
+            <li>Clean Floor</li>
+            <li>Learn <code>HTML</code></li>
+        </ol>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
