fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>A Couple of Place Holders</h1>
     </header>
         
-     <main> blo
+     <main> 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent accumsan quam diam, blandit vehicula augue laoreet eu. Nulla eget tincidunt augue. Maecenas ac dignissim lectus. In efficitur vestibulum elit, ac malesuada sem viverra quis. Cras malesuada rutrum porttitor. Maecenas tincidunt varius turpis vel sodales. Duis suscipit blandit diam in ultrices. In hac habitasse platea dictumst. Maecenas posuere sagittis vestibulum. Sed et urna venenatis, varius ipsum ac, accumsan tellus. Vivamus viverra metus leo, eget semper mauris tincidunt quis. Donec porttitor eros eu ligula lacinia, ac luctus nisl tristique. Quisque a mi velit.</p>
         <p>But <strong>what type</strong> of place block holders might we encounter?</p>
         <ol>
